--- a/tex/18.tex
+++ b/tex/18.tex
@@ -1374,5 +1374,14 @@ simulation described in Chapter~\ref{chap:hoffman-1} and above.
 
 We acknowledge contributions to Unicorn, both software development as
 well as ideas and scientific support from: Mattias Aechtner, Peter
-Brune, Zilan Ciftci, G\"aetan Compere, Claes Johnson, Ashraful Kadir, Kaspar M\"uller,
-Jeannette Sp\"uhler, Michael St\"ockli and Rodrigo Vilela de Abreu.
+Brune, Zilan Ciftci, G\"aetan Compere, Claes Johnson, Ashraful Kadir,
+Kaspar M\"uller, Jeannette Sp\"uhler, Michael St\"ockli and Rodrigo
+Vilela de Abreu.
+
+The authors would like to acknowledge the financial support from the
+European Research Council, Swedish Foundation for Strategic Research,
+the Swedish Research Council, and the Swedish Energy Agency.  The
+simulations were performed on resources provided by the Swedish
+National Infrastructure for Computing (SNIC) at High Performance
+Computing Center North (HPC2N), National Supercomputer Centre in
+Sweden (NSC) and PDC - Center for High-Performance Computing.
