Some more indexing

--- a/tex/29.tex
+++ b/tex/29.tex
@@ -401,6 +401,10 @@ simple strategy described above.
   \vspace*{24pt}
 \end{figure}
 
+\index{CBC.Solve}
+\index{CBC.Flow}
+\index{CBC.Twist}
+
 The two subproblems $(f)$, $(S)$ define a
 classic set of equations from fluid and structure mechanics. To solve the
 coupled system, a solver framework for handling both types of physics
@@ -1154,11 +1158,16 @@ problem~~\eqref{selim:eq:FSIsystem-f-mom}--\eqref{selim:eq:FSIsystem-M}
 problem~\eqref{selim:eq:dual} posed on a fixed reference domain, an
 adapted space and time discretization is obtained.
 
+\index{CBC.Swing}
+\index{CBC.Solve}
+
 \emp{CBC.Solve} is a collaboratively developed open source project
 (released under the GNU GPL) that is freely available from its source
-repository at \url{https://launchpad.net/cbc.solve/}. Its only dependency
-is a working FEniCS installation. \emp{CBC.Solve} is released with the
-goal that it will allow users to easily solve fluid problems, structure
-and FSI problems. Everyone is encouraged to fetch and try it.  Users are
-also encouraged to modify the code to better suit their own purposes,
-and contribute changes that they think are useful to the community.
+repository at \url{https://launchpad.net/cbc.solve/}. Its only
+dependency is a working FEniCS installation. The fluid--structure
+interaction solver presented in this chapter is available as CBC.Swing
+as part of CBC.Solve. The software is released with the goal that it
+will allow users to easily solve fluid problems, structure and FSI
+problems. Everyone is encouraged to fetch and try it. Users are also
+encouraged to modify the code to better suit their own purposes, and
+contribute changes that they think are useful to the community.
