--- a/tex/27.tex
+++ b/tex/27.tex
@@ -31,6 +31,8 @@
 \index{nonlinear elasticity}
 \index{elasticity}
 \index{hyperelasticity}
+\index{CBC.Solve}
+\index{CBC.Twist}
 
 Nonlinear elasticity theory plays a fundamental role in modeling the
 mechanical response of many polymeric and biological materials. Such
