Fix of the fix..

--- a/tex/18.tex
+++ b/tex/18.tex
@@ -167,7 +167,7 @@ of the conservation equations.
 In Unicorn we have currently implemented two constitutive laws, see \citet{HoffmanJanssonStockli2011} for details:
 \begin{align}
 \sigma^f_{ij} &= 2\mu_f \epsilon(u)_{ij} \quad &\text{(Newtonian fluid)}\\
-\frac{\partial \sigma^s_{ij}}{\partial t} &= 2\mu_s \epsilon(u)_{ij} + \frac{\partial u_i}{\partial x_k} \thinspace \sigma^s_{kj} + \sigma^s_{ik} \frac{\partial u_k}{\partial x_i} \quad &\text{(incompressible Neo-Hookean solid)}
+\frac{\partial \sigma^s_{ij}}{\partial t} &= 2\mu_s \epsilon(u)_{ij} + \frac{\partial u_i}{\partial x_k} \thinspace \sigma^s_{kj} + \sigma^s_{ik} \frac{\partial u_k}{\partial x_j} \quad &\text{(incompressible Neo-Hookean solid)}
 \end{align}
 
 %------------------------------------------------------------------------------
