Apply patch from Harish for lowercasing sections in FDL section

--- a/tex/BM1.tex
+++ b/tex/BM1.tex
@@ -397,7 +397,7 @@ license document, but changing it is not allowed.
 \def\thesection{\arabic{section}.}
 \setcounter{section}{-1}
 
-\section{PREAMBLE}
+\section{Preamble}
 
 The purpose of this License is to make a manual, textbook, or other
 functional and useful document ``free'' in the sense of freedom: to
@@ -421,7 +421,7 @@ whether it is published as a printed book.  We recommend this License
 principally for works whose purpose is instruction or reference.
 
 
-\section{APPLICABILITY AND DEFINITIONS}
+\section{Applicability and definitions}
 
 This License applies to any manual or other work, in any medium, that
 contains a notice placed by the copyright holder saying it can be
@@ -512,7 +512,7 @@ implication that these Warranty Disclaimers may have is void and has
 no effect on the meaning of this License.
 
 
-\section{VERBATIM COPYING}
+\section{Verbatim copying}
 
 You may copy and distribute the Document in any medium, either
 commercially or noncommercially, provided that this License, the
@@ -528,7 +528,7 @@ You may also lend copies, under the same conditions stated above, and
 you may publicly display copies.
 
 
-\section{COPYING IN QUANTITY}
+\section{Copying in quantity}
 
 If you publish printed copies (or copies in media that commonly have
 printed covers) of the Document, numbering more than 100, and the
@@ -566,7 +566,7 @@ Document well before redistributing any large number of copies, to give
 them a chance to provide you with an updated version of the Document.
 
 
-\section{MODIFICATIONS}
+\section{Modifications}
 
 You may copy and distribute a Modified Version of the Document under
 the conditions of sections 2 and 3 above, provided that you release
@@ -682,7 +682,7 @@ give permission to use their names for publicity for or to assert or
 imply endorsement of any Modified Version.
 
 
-\section{COMBINING DOCUMENTS}
+\section{Combining documents}
 
 You may combine the Document with other documents released under this
 License, under the terms defined in section~4 above for modified
@@ -707,7 +707,7 @@ and any sections Entitled ``Dedications''.  You must delete all sections
 Entitled ``Endorsements''.
 
 
-\section{COLLECTIONS OF DOCUMENTS}
+\section{Collections of documents}
 
 You may make a collection consisting of the Document and other documents
 released under this License, and replace the individual copies of this
@@ -721,7 +721,7 @@ License into the extracted document, and follow this License in all
 other respects regarding verbatim copying of that document.
 
 
-\section{AGGREGATION WITH INDEPENDENT WORKS}
+\section{Aggregation with independent works}
 
 A compilation of the Document or its derivatives with other separate
 and independent documents or works, in or on a volume of a storage or
@@ -741,7 +741,7 @@ Otherwise they must appear on printed covers that bracket the whole
 aggregate.
 
 
-\section{TRANSLATION}
+\section{Translation}
 
 Translation is considered a kind of modification, so you may
 distribute translations of the Document under the terms of section~4.
@@ -762,7 +762,7 @@ its Title (section~1) will typically require changing the actual
 title.
 
 
-\section{TERMINATION}
+\section{Termination}
 
 You may not copy, modify, sublicense, or distribute the Document
 except as expressly provided under this License.  Any attempt
@@ -790,7 +790,7 @@ reinstated, receipt of a copy of some or all of the same material does
 not give you any rights to use it.
 
 
-\section{FUTURE REVISIONS OF THIS LICENSE}
+\section{Future revisions of this license}
 
 The Free Software Foundation may publish new, revised versions
 of the GNU Free Documentation License from time to time.  Such new
@@ -812,7 +812,7 @@ version permanently authorizes you to choose that version for the
 Document.
 
 
-\section{RELICENSING}
+\section{Relicensing}
 
 ``Massive Multiauthor Collaboration Site'' (or ``MMC Site'') means any
 World Wide Web server that publishes copyrightable works and also
@@ -842,7 +842,7 @@ under CC-BY-SA on the same site at any time before August 1, 2009,
 provided the MMC is eligible for relicensing.
 
 
-\section*{ADDENDUM: How to use this License for your documents}
+\section*{Addendum: How to use this License for your documents}
 
 To use this License in a document you have written, include a copy of
 the License in the document and put the following copyright and
