Fix typo in Chapter 18 found by Marie

--- a/tex/18.tex
+++ b/tex/18.tex
@@ -185,7 +185,7 @@ magnitude fewer mesh points than with standard LES methods based on
 \subsection{Standard Galerkin}
 
 We begin by formulating the standard \cgone{}\cgone{} FEM
-\citep{ErikssonEstepHansboEtAl1996} with piecewise continuous linear
+\citep{ErikssonEstepHansboEtAl1996} with continuous piecewise linear
 solution in time and space for \eqref{eq:TotalModel}. We let $w = (u,
   p, \theta)$ denote the exact solution, $W = (U, P, \Theta)$ the
 discrete solution, $v = (v^u, v^p, v^\theta)$ the test function and
