Add demo programs for Chapter 1

--- a/tex/1.tex
+++ b/tex/1.tex
@@ -2589,7 +2589,7 @@ sample PDE for implementation is taken as a nonlinear Poisson
 equation:
 \begin{equation}
 -\nabla\cdot\left( q(u)\nabla u\right) = f.
-\end{equation}<
+\end{equation}
 The coefficient $q(u)$ makes the equation nonlinear (unless $q(u)$
 is constant in $u$).
 
