Change www.fenicsproject.org --> fenicsproject.org for consistency (with web page design policy, posters and T-shirts)

--- a/tex/10.tex
+++ b/tex/10.tex
@@ -819,7 +819,7 @@ illustrates the XML format for a $2 \times 2$ mesh of the unit square:
 \begin{xml}
 <?xml version="1.0" encoding="UTF-8"?>
 
-<dolfin xmlns:dolfin="http://www.fenicsproject.org">
+<dolfin xmlns:dolfin="http://fenicsproject.org">
   <mesh celltype="triangle" dim="2">
     <vertices size="9">
       <vertex index="0" x="0" y="0"/>
