--- a/tex/BM1.tex
+++ b/tex/BM1.tex
@@ -940,17 +940,17 @@ V.~Alfred, R.~Sethi, and D.~U. Jeffrey.
   Skavhaug, and Langtangen]{AlnaesLangtangenEtAl2007}
 M.~S. Aln\ae{}s, A.~Logg, K.-A. Mardal, O.~Skavhaug, and H.~P. Langtangen.
 \newblock \emph{{UFC} Specification and User Manual}, 2007.
-\newblock URL \url{http://www.fenicsproject.org}.
+\newblock URL \url{http://fenicsproject.org}.
 
 \bibitem[Aln\ae{}s and Logg(2009)]{AlnaesLogg2009}
 M.~S. Aln\ae{}s and A.~Logg.
 \newblock \emph{{UFL} Specification and User Manual}, 2009.
-\newblock URL \url{http://www.fenicsproject.org}.
+\newblock URL \url{http://fenicsproject.org}.
 
 \bibitem[Aln{\ae}s and Mardal(2009)]{AlnaesMardal2009a}
 M.~S. Aln{\ae}s and K.-A. Mardal.
 \newblock \emph{{SyFi}}, 2009.
-\newblock URL \url{http://www.fenicsproject.org}.
+\newblock URL \url{http://fenicsproject.org}.
 
 \bibitem[Aln{\ae}s and Mardal(2010)]{AlnaesMardal2009b}
 M.~S. Aln{\ae}s and K.-A. Mardal.
@@ -2436,7 +2436,7 @@ R.~C. Kirby.
 \bibitem[Kirby(2006{\natexlab{a}})]{Kirby2006}
 R.~C. Kirby.
 \newblock \emph{{FIAT}}, 2006{\natexlab{a}}.
-\newblock URL \url{http://www.fenicsproject.org}.
+\newblock URL \url{http://fenicsproject.org}.
 
 \bibitem[Kirby(2006{\natexlab{b}})]{Kirby2006a}
 R.~C. Kirby.
@@ -2715,7 +2715,7 @@ A.~Logg.
 \bibitem[Logg and Mardal(2009)]{LoggMardal2009}
 A.~Logg and K.-A. Mardal.
 \newblock {Exterior}, 2009.
-\newblock URL \url{http://www.fenicsproject.org}.
+\newblock URL \url{http://fenicsproject.org}.
 
 \bibitem[Logg and Wells(2010)]{LoggWells2010}
 A.~Logg and G.~N. Wells.
