--- a/tex/FM1.tex
+++ b/tex/FM1.tex
@@ -37,7 +37,7 @@ The FEniCS Book}
 \vfill
 
 \noindent
-{\large \tt www.fenicsproject.org}
+{\large \tt fenicsproject.org}
 
 % Copyright page
 \newpage
@@ -120,10 +120,10 @@ Feedback on this book is welcome, and can be given at
 file bug reports if you find errors in the text. For more information
 about the FEniCS Project, access to the software presented in this
 book, documentation, articles and presentations, visit the FEniCS
-Project web site at \url{http://www.fenicsproject.org}. Some of the
+Project web site at \url{http://fenicsproject.org}. Some of the
 chapters in this book are accompanied by supplementary material in the
 form of code examples. These code examples can be downloaded from
-\url{http://www.fenicsproject.org/book}.
+\url{http://fenicsproject.org/book}.
 
 \vspace{1em}
 
