More URL updates

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -477,14 +477,14 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
   author = {M. Aln\ae{}s and H. P. Langtangen and A. Logg and K.-A. Mardal and
 	O. Skavhaug},
   year = {2007},
-  url = {http://www.fenicsproject.org}
+  url = {http://fenicsproject.org}
 }
 
 @MANUAL{AlnaesLogg2009,
   title = {{UFL} Specification and User Manual},
   author = {M. S. Aln\ae{}s and A. Logg},
   year = {2009},
-  url = {http://www.fenicsproject.org}
+  url = {http://fenicsproject.org}
 }
 
 @ARTICLE{AlnaesLoggMardalEtAl2009,
@@ -515,7 +515,7 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
   title = {{SyFi}},
   author = {Aln{\ae}s, M. S. and K.-A. Mardal},
   year = {2009},
-  url = {http://www.fenicsproject.org}
+  url = {http://fenicsproject.org}
 }
 
 @ARTICLE{AlperinMazdaLichtorEtAl2006,
@@ -4360,7 +4360,7 @@ year = "2006"
   title = {{FIAT}},
   author = {R. C. Kirby},
   year = {2006},
-  url = {http://www.fenicsproject.org}
+  url = {http://fenicsproject.org}
 }
 
 @ARTICLE{Kirby2011,
@@ -4910,7 +4910,7 @@ author = {Hans Petter Langtangen and Geir Pedersen}
   year = {2009},
   owner = {kent-and},
   timestamp = {2009.06.08},
-  url = {http://www.fenicsproject.org}
+  url = {http://fenicsproject.org}
 }
 
 @INBOOK{LoggMardalAlnaesEtAl2007,
