Fix some pagebreaks in Chapter 27

--- a/book.tex
+++ b/book.tex
@@ -35,6 +35,9 @@
 %------------------------------------------------------------------------------
 % Chapters
 
+% For testing
+%\input{tex/27}\end{document}
+
 % Tutorial
 \input{tex/1}
 
