--- a/tex/27.tex
+++ b/tex/27.tex
@@ -610,7 +610,7 @@ to derive this method, \eqref{eq:narayanan:weakform}, which is
 a second order differential equation in time, is rewritten as a system
 of first order equations. We do this by introducing an additional
 velocity variable, $\bw = \frac{\partial \bu}{\partial t}$. Thus, the
-weak form now reads: \\*\pagebreak
+weak form now reads:
 
 \noindent Find ($\bu, \bw) \in \mathrm{V}$, such that $\foralls (\bv,
 \br) \in \hat{\mathrm{V}}$:
@@ -1235,5 +1235,7 @@ these lines, some possible ideas for extending the framework include:
 %%
 Contributions toward these (or other useful) extensions are
 welcome.
+\enlargethispage{12pt}
+
 \processqueries
 \endgroup
