Consistency fix in bibliography.

--- a/tex/BM1.tex
+++ b/tex/BM1.tex
@@ -3432,7 +3432,7 @@ L.~R. Scott and M.~Vogelius.
 \bibitem[Selim et~al.(2011)Selim, Logg, Narayanan, and Larson]{SelimLogg2011a}
 K.~Selim, A.~Logg, H.~Narayanan, and M.~G. Larson.
 \newblock An adaptive finite element method for fluid--structure interaction.
-\newblock \emph{submitted to journal}, 2011.
+\newblock Submitted.
 
 \bibitem[Si(2007)]{Si2007}
 H.~Si.
