Small index fix

--- a/tex/36.tex
+++ b/tex/36.tex
@@ -358,7 +358,7 @@ we define the \babuska{} constant $\gamma_h$:
 In particular, the discrete problem is well-posed if the \babuska{}
 stability condition holds; namely, if $\gamma_h \geqslant \gamma_0 >
 0$ for any $h > 0$.
-\index{\babuska{} condition}
+\index{Babu\v{s}ka condition}
 
 %%% --------------------------------------------------------------
 
